<resources>
    <string name="app_name">VpFirebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_holder">Holder</string>
    <string name="text_firebase_login">Firebase Login</string>
    <string name="text_holder_email">Email</string>
    <string name="text_holder_password">Password</string>
    <string name="text_holder_anonymous">Anonymous</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_phone">Phone</string>
    <string name="text_google">Google</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_github">Github</string>
    <string name="text_logout_onetap">Logout OneTap</string>
    <string name="text_login_google">Login Google</string>

    <!-- Facebook -->
    <string name="facebook_app_id">3421932894702341</string>
    <string name="fb_login_protocol_scheme">fb3421932894702341</string>
    <string name="facebook_client_token">b9e84cc3a3ce451ebb8bb77edad16882</string>
    <string name="text_holder_phone">Phone</string>
    <string name="text_verification">Code Verification</string>
    <string name="text_verification_one_code">Enter one time password send on/n%s</string>
    <string name="text_verify_code">Verify code</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="msg_token_fmt">fcm token %s</string>

</resources>